# GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug_capture.cap  vcpkg-configuration.json  vcpkg.json
Sandbox/: CMakeLists.txt  Debugger.cpp  EntryPoint.cpp  MapObject.cpp  MapPhysicsObject.cpp  Player.cpp  PlayerControlled.cpp  imgui.ini  world.json  world2.json  world3.json  world4.json
Sandbox/models/: Idle.fbx  animTest.blend  animTest.blend1  animTest.glb  box.blend  box.blend1  box.glb  map1.blend  map1.blend1  map1.fbx  map1.glb  random_matrices_100.txt  ybot.glb  ybot_falling.glb  ybot_idle.glb  ybot_jog_backward.glb  ybot_jog_forward.glb  ybot_jog_left.glb  ybot_jog_right.glb
Sandbox/shaders/: ambient.glsl  animated_model_fs.glsl  animated_model_gs.glsl  animated_model_shadow_vs.glsl  animated_model_vs.glsl  atmosphere_ambient.glsl  atmosphere_directional.glsl  atmosphere_directional_ubo.glsl  debug_line_fs.glsl  debug_line_vs.glsl  directional.glsl  fullscreen_quad.glsl  gubo.glsl  particle.glsl  particle_fs.glsl  particle_vs.glsl  point.glsl  postprocess_bloom.glsl  postprocess_bloom_blur.glsl  postprocess_compose.glsl  postprocessing_test.glsl  sky.glsl  static_model_fs.glsl  static_model_gs.glsl  static_model_shadow_gs.glsl  static_model_shadow_vs.glsl  static_model_vs.glsl  vertex_shader.glsl
SandboxDedicatedServer/: CMakeLists.txt  EntryPoint.cpp
SandboxInclude/: SandBox_Debugger.h  SandBox_MapObject.h  SandBox_MapPhysicsObject.h  SandBox_ParticleEmiter.h  SandBox_Player.h  SandBox_PlayerControlled.h
engine/: CMakeLists.txt  Command.cpp  Window.cpp
engine/Components/: AnimatedModel.cpp  Animation.cpp  Animator.cpp  Animator2DBlend.cpp  Camera.cpp  CameraFrustumCuller.cpp  DirectionalLight.cpp  ModelCache.cpp  ParticleEmiter.cpp  PointLight.cpp  RigidBody.cpp  StaticModel.cpp
engine/Core/Data/: GameObjectManager.cpp
engine/Data/: AnimatedModelRenderer.cpp  Data.cpp  DebugRenderer.cpp  DirectionalLight.cpp  GameObjectManager.cpp  LightRenderer.cpp  ParticleEmiter.cpp  ParticleRenderer.cpp  PointLight.cpp  SkyRenderer.cpp  StaticModel.cpp  StaticModelCache.cpp  StaticModelRenderer.cpp
engine/Debug/: Debug.cpp
engine/Input/: Keyboard.cpp  Mouse.cpp
engine/Loggers/: FileLogger.cpp  Logger.cpp
engine/Physics/: Physics.cpp
engine/Renderer/: Atmosphere.cpp  CPUBuffer.cpp  DefaultRenderPass.cpp  GlobalUniformBuffer.cpp  Image.cpp  Postprocessing.cpp  PostprocessingRenderPass.cpp  Renderer.cpp  ShadowRenderPass.cpp
engine/World/: DynamicWorldObject.cpp  GameObjectManager.cpp  World.cpp
engine/core/: Renderer.cpp  Window.cpp
engine/core/Data/: Camera.cpp  LightRenderer.cpp  PointLight.cpp  StaticModel.cpp  StaticModelRenderer.cpp
engine/core/Loggers/: FileLogger.cpp  Logger.cpp  VisualStudioLogger.cpp
engine/core/Physics/: Physics.cpp
engine/core/Renderer/: AmbientLightPipeline.cpp  DefaultPipeline.cpp  DefaultRenderPass.cpp  GPUBuffer.cpp  GlobalUniformBuffer.cpp  Image.cpp  IndexBuffer.cpp  PointLightPipeline.cpp  Renderer.cpp  StaticModelPipeline.cpp  VertexBuffer.cpp
include/: Components.h  Core.h  Data.h  Debug.h  Input.h  Logger.h  Network.h  Physics.h  RenderStages.h  Renderer.h  Window.h  World.h
